[package]
name = "beryllium"
description = "Opinionated wrapper for `fermium`."
repository = "https://github.com/Lokathor/beryllium"
version = "0.10.0"
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

[features]
cargo_check = ["fermium/cargo_check"]

[dependencies]
fermium = "22604.0.0"
bytemuck = "1"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc = "0.2" # needed to verify that we're on the main thread.

[dev-dependencies]
ash = { version = "0.37.2", default-features = false }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
# building the docs is a "check only" style operation.
features = ["cargo_check"]
