[package]
name = "beryllium"
description = "Opinionated wrapper for `fermium`."
repository = "https://github.com/Lokathor/beryllium"
version = "0.13.3"
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

[features]
cargo_check = ["fermium/cargo_check"]
vulkan = ["raw_vulkan_handle", "fermium/vulkan"]

[dependencies]
fermium = "22605.0.0"
bytemuck = "1"
raw_vulkan_handle = { version = "0.1.1", optional = true }
zstring = { version = "0.2.4", features = ["alloc"] }
pixel_formats = "0.1.5"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc = "0.2" # needed to verify that we're on the main thread.

[dev-dependencies]
ash = { version = "0.37.2", default-features = false }

[[example]]
name = "ash_init"
required-features = ["vulkan"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
# building the docs is a "check only" style operation.
features = ["cargo_check"]
